Git ignore update

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ $RECYCLE.BIN/
 .idea/vcs.xml
 IAProjetoFinal.iml
 .idea/workspace.xml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/inspectionProfiles/Project_Default.xml
